--- a/index.html
+++ b/index.html
@@ -1069,7 +1069,7 @@
                     <div class="row">
                         <div class="col-lg-4 col-md-6">
                             <div class="footer_widget">
-                                <h3>About Frudbaz</h3>
+                                <h3>About Quickmunch</h3>
                                 <p>Lorem ipsum dolor sit consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore</p>
                                 <div class="open_hour_wrap ul_li">
                                     <div class="icon">
@@ -1087,10 +1087,10 @@
                             <div class="footer_widget">
                                 <h3>Contact us</h3>
                                 <ul class="c_wrap">
-                                    <li><span>Address</span>: 8638 Amarica Stranfod Mailbon Star</li>
-                                    <li><span>Mail</span>: support@example.com</li>
-                                    <li><span>Phone</span>: +7464 0187 3535 645</li>
-                                    <li><span>Fax id</span>: +9 659459 49594</li>
+                                    <li><span>Address</span>: Iwo Road Ibadan Oyo, Nigeria</li>
+                                    <li><span>Mail</span>: quickmunchrestaurant@gmail.com</li>
+                                    <li><span>Phone</span>: +234 915 280 5734</li>
+                                    <li><span>Fax id</span>: +234 808 888 6823</li>
                                 </ul>
                             </div>
                         </div>
@@ -1146,7 +1146,7 @@
                             </div>
                             <div class="col-lg-6 col-md-9">
                                 <div class="copyright text-md-center">
-                                    <p>Copy Right@ Example 2021.Design By XpressRow</p>
+                                    <p> All Right Reserved @ Quickmunch 2023</p>
                                 </div>
                             </div>
                             <div class="col-lg-3 col-md-12">
