--- a/index.html
+++ b/index.html
@@ -68,11 +68,6 @@
                                     <ul class="main_menu_list ul_li">
                                         <li class="dropdown active">
                                             <a class="nav-link" href="#">Home</a>
-                                            <ul class="sub-menu">
-                                                <li class="active"><a href="index.html">Home One</a></li>
-                                                <li><a href="index-2.html">Home Two</a></li>
-                                                <li><a href="index-3.html">Home Three</a></li>
-                                            </ul>
                                         </li>
                                         <li><a class="nav-link" href="about.html">About</a> </li>
                                         <li class="dropdown">
@@ -214,44 +209,17 @@
                 <div class="header-mobile-search">
                     <form role="search" method="get" action="#">
                         <input type="text" placeholder="Search Keywords">
-                        <button type="submit"><i class="ti-search"></i></button>
+                        <button type="submit"></button>
                     </form>
                 </div>
                 <ul id="mobile-menu-active">
-                    <li class="dropdown"><a href="index.html">Home</a>
-                        <ul class="sub-menu">
-                            <li><a href="index.html">Home One</a></li>
-                            <li><a href="index-2.html">Home Two</a></li>
-                            <li><a href="index-3.html">Home Three</a></li>
-                        </ul>
-                    </li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
-                    <li class="dropdown">
-                        <a href="#">Pages</a>
-                        <ul class="sub-menu">
-                            <li><a href="menu.html">Recipe Menu</a></li>
-                            <li><a href="reservation.html">Reservation Form</a></li>
-                            <li><a href="history.html">History</a></li>
-                            <li><a href="team.html">Team</a></li>
-                            <li><a href="faq.html">FAQ</a></li>
-                        </ul>
+                    <li>
+                        <a href="shop.html">Shop</a>
                     </li>
-                    <li class="dropdown">
-                        <a href="#">Shop</a>
-                        <ul class="sub-menu">
-                            <li><a href="shop.html">Shop List</a></li>
-                            <li><a href="shop-sidebar.html">Shop Sidebar</a></li>
-                            <li><a href="shop-details.html">Shop Details</a></li>
-                            <li><a href="cart.html">Shop Cart</a></li>
-                            <li><a href="checkout.html">Shop Checkout</a></li>
-                        </ul>
-                    </li>
-                    <li class="dropdown">
-                        <a href="#">Blog</a>
-                        <ul class="sub-menu">
-                            <li><a href="blog.html">Blog</a></li>
-                            <li><a href="blog-details.html">Blog Details</a></li>
-                        </ul>
+                    <li>
+                        <a href="blog.html">Blog</a>
                     </li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
